# notes_mcp

./: .gitignore  APPLE_NOTES_FORMATTING_SUPPORT.md  CHANGES_SUMMARY.md  CHATGPT_USAGE_GUIDE.md  CURSOR_SETUP.md  CUSTOM_GPT_CONFIG.md  DEPLOYMENT.md  GIST_TEMPLATE.md  NOTE_TAGS.md  PULL_WORKER_TEST_RESULTS.md  QUICK_FIX.md  QUICK_START_CHATGPT.md  QUICK_START_INGRESS.md  README.md  README_WORKER.md  REPO_DESCRIPTION.md  SECURITY_REVIEW.md  SERVICE_SETUP.md  TAILSCALE_INGRESS_GUIDE.md  TESTING_PULL_WORKER.md  TEST_RESULTS.md  check_status.py  com.notes-mcp.ingress.plist.template  com.notes-mcp.worker.plist  com.notes-mcp.worker.plist.template  gpt_action.json.example  openapi-schema.json  pyproject.toml  setup_service.sh  start_ingress.sh  start_ingress.sh.example  start_worker.sh.example  test_manual.py  test_pull_worker.py  test_simple.sh
docs/: TAILSCALE_ADMIN_CONSOLE_CONFIG.md
docs/launchd/: README.md  com.notes-mcp-export.plist  com.notes-mcp-ingress.plist
scripts/: clear_results.sh  common.sh  export-tailscale-config.sh  generate-ingress-key.sh  get-tailscale-hostname.sh  install-ingress-service.sh  install_macos.sh  quick_note.sh  setup-funnel.sh  setup-tailscale-serve.sh  setup_ingress_service.sh  smoke_test.sh  start-notes-mcp-ingress.sh  start_ingress.sh  start_worker.sh  uninstall_macos.sh
src/notes_mcp/: __init__.py  applescript.py  bridge_client.py  bridge_server.py  enqueue_job.py  export_notes.py  formatting.py  ingress.py  logging.py  pull_worker.py  security.py  server.py  sign_job.py
